<resources>
    <string name="app_name">Swoosh</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="find_a_team">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="desired_league">Desired league</string>
    <string name="logo">Logo</string>
    <string name="backgroundlogo">backgroundLogo</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="button">Button</string>
    <string name="lookingFor">Looking for co-ed beginner league near you</string>
</resources>